# mentcare-app

./: .gitignore  Dockerfile  Dockerfile.selenium  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  __azurite_db_table__.json  docker-compose.yml  dump.sql  my.cnf  page_source.html  pyproject.toml  requirements.txt
.github/workflows/: e2e-tests.yml  pushFrontendBackend.yml  pytestRunner.yml  render.yml
.harness/: Build_AkulCoder_mentcare_app_1734306656164-pr-trigger-input-set-1734306657079.yaml  Build_AkulCoder_mentcare_app_1734306656164-push-trigger-input-set-1734306657987.yaml
.harness/pipelines/: mentcare-app-1734305623959.yaml
backend/: app.py  requirements.txt  requirements_bad.txt
backend/endpoints/: chatPage.py  example.py  landingPage.py  loginPage.py  patientDashboard.py  patientProfile.py  paymentPage.py  registrationPage.py  settings.py  therapistDashboard.py  therapistListPage.py  therapistListProfile.py  therapistProfile.py  therapist_Profile.py
backend/tests/: app_settings_test.py  app_test.py  chat_test.py  landing_test.py  login_test.py  payment_test.py  (+2 more)
frontend/: Dockerfile  package-lock.json  package.json
tests/: page_source.html  test_acceptingpatients.py  test_actdeactpatient.py  test_addtherapistreview.py  test_dailysurveys.py  test_deletepatient.py  test_graphs.py  test_journal.py  test_login.py  test_logout.py  test_payment.py  test_registerpatient.py  test_registertherapist.py  test_searchtherapist.py  test_testimonial.py  test_therapistsurveys.py
(+46 files in other folders)
